# jetreader

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: Dependencies.cmake  SysCheck.cmake  Utils.cmake
cmake/Modules/: FindFastJet.cmake
docs/: cmake_structure.md  coding_standards.md  cpp_style.md  todo.md
docs/other/: bemc_lookup_alg.txt  example_config.yaml
jetreader/: CMakeLists.txt
jetreader/examples/: CMakeLists.txt  test_reader.cc
jetreader/lib/: CMakeLists.txt  assert.cc  assert.h  map.h  memory.h  parse_csv.h  parse_csv_test.cc  path_utils.cc  path_utils.h  path_utils_test.cc  string_cast.h  string_cast_test.cc  string_utils.cc  string_utils.h  string_utils_test.cc  test_data.cc  test_data.h
jetreader/lib/memory/: CMakeLists.txt  make_unique.h
jetreader/reader/: CMakeLists.txt  bemc_helper.cc  bemc_helper.h  bemc_helper_test.cc  centrality.cc  centrality.h  centrality_def.cc  centrality_def.h  centrality_def_test.cc  centrality_test.cc  event_selector.cc  event_selector.h  event_selector_test.cc  hadronic_correction_benchmark.cc  hadronic_correction_test.cc  reader.cc  reader.h  reader_bad_run_benchmark.cc  reader_benchmark.cc  reader_test.cc  reader_utils.cc  reader_utils.h  reader_utils_test.cc  tower_selector.cc  tower_selector.h  tower_selector_test.cc  track_selector.cc  track_selector.h  track_selector_test.cc  trigger_lookup.h  trigger_lookup_test.cc  vector_info.cc  vector_info.h  vector_info_test.cc
jetreader/reader/config/: CMakeLists.txt  config_manager.cc  config_manager.h  config_manager_test.cc  event_selector_config_helper.cc  event_selector_config_helper.h  event_selector_config_helper_test.cc  reader_config_helper.cc  reader_config_helper.h  reader_config_helper_test.cc  tower_selector_config_helper.cc  tower_selector_config_helper.h  tower_selector_config_helper_test.cc  track_selector_config_helper.cc  track_selector_config_helper.h  track_selector_config_helper_test.cc
jetreader/test/: CMakeLists.txt
